# lambda-calculus

./: .gitignore  LICENSE  README.md  lambda-calculus.cabal
app/: Command.hs  Main.hs  Parser.hs
lib/: prelude.lc  std.lc
src/: Bindings.hs  Command.hs  Term.hs
src/Data/: Labeled.hs  StringTrie.hs  Term.hs
