cabal-version:      2.4
name:               lambda-calculus
version:            0.1.0.0
synopsis:           An LC interpreter with GHCi interface.
description:
  Please see the README on GitHub at
  <https://github.com/TurtlePU/lambda-calculus#readme>

homepage:           https://github.com/TurtlePU/lambda-calculus#readme
bug-reports:        https://github.com/TurtlePU/lambda-calculus/issues
license:            MIT
license-file:       LICENSE
author:             TurtlePU
maintainer:         sokolov.p64@gmail.com
extra-source-files:
  CHANGELOG.md
  README.md

library
    exposed-modules:
        Bindings
        Term
    build-depends:
        base
      , bytestring
      , utf8-string
      , bytestring-trie
    hs-source-dirs:   src
    default-language: Haskell2010

executable lambda-calculus
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0
      , mtl ^>=2.3
      , haskeline ^>=0.8
      , lambda-calculus
    hs-source-dirs:   app
    default-language: Haskell2010
